# of

./: .cursorrules  .gitignore  README.md  docker-compose.yml  nginx.conf  package.json  test-docker-setup.sh
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  check_failed_jobs.py  db.sqlite3  main.py  pyproject.toml  run_tests.py  run_worker.py  run_worker_local.sh  settings.py  simple_worker.py  start_worker.sh  test_search.py  urls.py  worker.py  worker_settings.py
backend/app/: api.py  auth.py  client_manager.py  llms.py  models.py  queue_manager.py  schemas.py  services.py  tasks.py
backend/app/migrations/: 0001_initial.py  0002_initial.py  0003_add_analysis_status.py  0004_alter_conversationsession_user_content_user_and_more.py  0005_contentchunk.py
backend/migrations/: 0001_initial.py  0002_content_delete_countlog.py  0003_remove_content_content_remove_content_created_at_and_more.py  0004_rename_title_content_name.py  0005_content_created_at_content_updated_at.py  0006_content_content.py  0007_content_processed.py  0008_content_difficulty_level_and_more.py  0009_conversationsession_user_message_and_more.py
backend/tests/: conftest.py  factories.py
backend/tests/integration/: test_api_chat.py  test_api_content.py
backend/tests/unit/: test_llms.py  test_models.py  test_services.py
frontend/: .cursorrules  .dockerignore  Dockerfile  README.md  cypress.config.js  package-lock.json  package.json
frontend/public/: health.json  index.html  manifest.json
frontend/src/: App.css  App.js  index.css
frontend/src/components/: AuthPage.js  (+12 more)
(+6 files in other folders)
